--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,1 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Istok+Web:ital,wght@0,400;0,700;1,400;1,700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Outfit:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
+
+@theme {
+    --font-istok: "Istok Web", sans-serif;
+    --font-Outfit: "Outfit", sans-serif;
+}
